--- a/src/assets/components/header/style.module.scss
+++ b/src/assets/components/header/style.module.scss
@@ -7,5 +7,68 @@
   z-index: -1;
 }
 
+  &__title {
+    text-align: center;
+    color: #DB3138;
+    font-size: 60px;
+    margin-top: 15%;
+  }
+
+  &__about {
+    text-align: center;
+    font-size: 20px;
+    color: white;
+  }
+
+  &__btn {
+    background: #ff0000;
+    color: #fff;
+    padding: 10px;
+    border-radius: 10px;
+    border: none;
+    margin-top: 20px;
+  }
+
+  &__box_btn {
+    display: flex;
+    justify-content: center;
+  }
+
+  &__info {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 170px;
+  }
+  
+  &__info h4 {
+    color: #fff;
+    font-size: 18px;
+  }
+
+  &__info p {
+    color: #ff0000;
+  }
+
+  &__address {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__phone {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__time {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+  }
+
+  
+
+
 }
 
