--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -1,9 +1,25 @@
+
+@font-face {
+  font-family: 'Reformag';
+  src: url("./../fonts/Reformagroteskboldc.otf");
+}
+
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: 'Reformag', Serif, monospace;
 }
 
 .nav_menu {
   color: white;
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
 }
