--- a/src/assets/components/answer/answer.module.scss
+++ b/src/assets/components/answer/answer.module.scss
@@ -3,10 +3,12 @@
   text-align: center;
   text-transform: uppercase;
   margin: 0 auto;
+  padding: 120px 0;
 
-  .row {
-    gap: 30px;
-  }
+ &  .fontAwesomeIcon {
+   width: 40px;
+   height: 40px;
+ }
 
 
   & h3 {
@@ -30,5 +32,16 @@
     color: #898989;
     background: transparent;
     width: 100%;
+    min-height: 114px;
+    padding: 15px 15px 10px 25px;
   }
+  & .btn {
+    padding: 15px 25px;
+    background: #DB3138;
+    color: #fff;
+    text-transform: uppercase;
+    letter-spacing: 0.05em;
+    border-radius: 15px;
+  }
+
 }
